# PriceScoutAI

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
src/pricescoutai/: OLD___init__.py  __init__.py  models.py  retailers.py
tests/: test_price_scouter.py
utils/: meta-run.sh  run.sh  shellcheck.sh
