[project]
name = "pricescoutai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "david", email = "wizzardx@gmail.com" }
]
dependencies = [
    "pydantic>=2.10.5",
    "marvin>=2.3.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "isort>=5.13.2",
    "black>=24.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pricescoutai"]
